# nonlinear-dynamics

./: .gitignore  README.md
analytics/: README.md  pyproject.toml
analytics/examples/: example_1d_map.py  example_logistic_bifurcation.py
bifurcation/: Cargo.toml
cobweb/: .pre-commit-config.yaml  README.md
cobweb/src/: main.py
kuramoto/: Cargo.toml  README.md  config.toml  kuramoto.pq
kuramoto/src/: config.rs  main.rs  simulator.rs
kuramoto/utils/: main.py  pyproject.toml
