[project]
name = "analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "altair>=5.5.0",
    "jupyter>=1.1.1",
    "marimo>=0.12.10",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "polars>=1.27.1",
    "seaborn>=0.13.2",
]
